# MIcroRobotNew

./: run
Anim3D/: anim.py  plot3d.py  wave.py
diagonal_phases/: phases_a0.3.txt
include/: dimentionless_parameters.hpp  environment.hpp  external_magnetic_field.hpp  paramagnetic_particle.hpp  permanent_magnetic_particle.hpp  swimmer.hpp
phases/: fig3_result.txt  fig3_theta1out.txt  phase.eps  phase_diagram_g0.000001.eps  phase_diagram_g0.0001.eps  phase_diagram_g0.01.eps  phase_diagram_g1.eps  phase_diagram_g1e-10.eps  phase_diagram_g1e-7.eps  phase_diagram_g1e-8.eps  phase_gamma0.01.eps  phase_gamma0.01_2.eps  phase_gamma0.01_mt.eps  phase_gamma0.1.eps  phase_gamma1.eps  phase_mntau_gamma0.01_mt.eps  phase_mt.eps  phase_mtg0.01.eps  phase_mtg0.1.eps  phase_test_gamma0.01.eps  phase_test_gamma0.1.eps  phases_b0.001.txt  phases_b0.01.txt  phases_b0.1.txt  phases_b1.0-2.txt  phases_b1.0.txt  phases_g0.000001.txt  phases_g0.0001.txt  phases_g0.01.txt  phases_g1.txt  phases_g1e-10.txt  phases_g1e-7.txt  phases_g1e-8.txt  phases_gamma0.01.txt  phases_gamma0.01_2.txt  phases_gamma0.01_mt.txt  phases_gamma0.1.txt  phases_gamma1.txt  phases_mntau_gamma0.01.txt  phases_mtg0.01.txt  (+2 more)
result/: fig3_result.txt  fig3_theta1out.txt  params.csv  params.txt  phases.txt  potential.txt  (+5 more)
src/: CMakeLists.txt  dimentionless_parameters.hpp  environment.cpp  environment.hpp  external_magnetic_field.cpp  external_magnetic_field.hpp  main.cpp  paramagnetic_particle.cpp  paramagnetic_particle.hpp  permanent_magnetic_particle.cpp  permanent_magnetic_particle.hpp  swimmer.cpp  swimmer.hpp
